# Namerl

./: .gitignore  LICENSE  README.md  data_processing.py  pyproject.toml
.github/workflows/: ci.yml  update-data.yml
docs/: CNAME  index.html  manifest.json  sw.js
docs/css/: style.css
docs/data/: boys.json  girls.json  mixed.json
docs/js/: app.js  chart.js  filters.js  swipe.js
tests/: test_data_processing.py  test_filters.js
