[project]
name = "namerl"
dynamic = ["version"]
description = "Name browser based on historic Austrian baby name data"
authors = [{ name = "Manuel Lanzinger" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "pandas>=2.3.3",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["data_processing.py"]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pandas-stubs>=2.3.2.250926",
    "pytest>=8.4.2",
    "ruff>=0.14.1",
]

[tool.uv.pip]
exclude-newer = "7 days"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",   # Conflicts with formatter
    "ISC001",   # Conflicts with formatter
    "D203",     # Conflicts with D211
    "D213",     # Conflicts with D212
]

[tool.ruff.lint.per-file-ignores]
"data_processing.py" = ["T201"]  # Allow print in CLI script
"tests/**/*.py" = [
    "S101",      # Allow assert in tests
    "ANN001",    # Missing type annotations
    "ANN201",    # Missing return type
    "PLR2004",   # Magic values in tests are fine
    "D",         # Don't require docstrings in tests
    "RUF059",    # Unused unpacked variables
    "PD011",     # .values is fine in tests
]
